[build-system]
requires = ["scikit-build-core>=0.10,<0.12", "pybind11>=2.13,<3"]
build-backend = "scikit_build_core.build"

[project]
name = "robot-map-planner"
version = "0.1.0"
description = "Offline PCD occupancy map editor, costmap compiler, and path planner"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "python-multipart>=0.0.18,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
test = ["httpx>=0.27,<1", "pybind11>=2.13,<3", "pytest>=8,<9"]

[project.scripts]
robot-map-planner = "robot_map_planner.cli:main"

[tool.scikit-build]
wheel.packages = ["src/robot_map_planner"]
cmake.build-type = "Release"

[tool.pytest.ini_options]
testpaths = ["tests"]
